# ITMO-programming-labs

Lab 1/code/: CMakeLists.txt  geometry.h  main.cpp
Lab 1/code/geometry/: BasicInterface.h  BrokenLine.h  Chain.h  Polygon.h  RegularPolygon.h  Trapezoid.h  Triangle.h  exceptions.h  point.h
Lab 2/code/: CMakeLists.txt  Polynomial.h  Polynomial_vector.h  main.cpp
Lab 3/code/: CMakeLists.txt  Info.h  main.cpp
Lab 3/code/xml/: pugixml.cpp  pugixml.h
Lab 4/code/: CMakeLists.txt  main.cpp  stlupgrade.h
Lab 5/code/: CMakeLists.txt  cb_iterator.h  circular_buffer.h  main.cpp
Lab 6/code/: CMakeLists.txt  cube.h  main.cpp  mini_cube.h  rubik.h  side.h
